ingress/ec-00-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ec-00-api
  namespace: vcluster-ec-00
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ec-00.ff26.it`)
      kind: Rule
      services:
        - name: ec-00
          port: 443
          scheme: https
          serversTransport: ec-00-backend
  tls: {}
