ingress/ec-01-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ec-01-api
  namespace: vcluster-ec-01
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ec-01.ff26.it`)
      kind: Rule
      services:
        - name: ec-01
          port: 443
          scheme: https
          serversTransport: ec-01-backend
  tls: {}
