ingress/ec-02-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ec-02-api
  namespace: vcluster-ec-02
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ec-02.ff26.it`)
      kind: Rule
      services:
        - name: ec-02
          port: 443
          scheme: https
          serversTransport: ec-02-backend
  tls: {}
