ingress/ec-03-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ec-03-api
  namespace: vcluster-ec-03
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ec-03.ff26.it`)
      kind: Rule
      services:
        - name: ec-03
          port: 443
          scheme: https
          serversTransport: ec-03-backend
  tls: {}
