ingress/ec-04-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ec-04-api
  namespace: vcluster-ec-04
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ec-04.ff26.it`)
      kind: Rule
      services:
        - name: ec-04
          port: 443
          scheme: https
          serversTransport: ec-04-backend
  tls: {}
