ingress/ec-05-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ec-05-api
  namespace: vcluster-ec-05
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ec-05.ff26.it`)
      kind: Rule
      services:
        - name: ec-05
          port: 443
          scheme: https
          serversTransport: ec-05-backend
  tls: {}
