ingress/ec-07-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ec-07-api
  namespace: vcluster-ec-07
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ec-07.ff26.it`)
      kind: Rule
      services:
        - name: ec-07
          port: 443
          scheme: https
          serversTransport: ec-07-backend
  tls: {}
