ingress/ec-08-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ec-08-api
  namespace: vcluster-ec-08
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ec-08.ff26.it`)
      kind: Rule
      services:
        - name: ec-08
          port: 443
          scheme: https
          serversTransport: ec-08-backend
  tls: {}
