ingress/ec-09-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ec-09-api
  namespace: vcluster-ec-09
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ec-09.ff26.it`)
      kind: Rule
      services:
        - name: ec-09
          port: 443
          scheme: https
          serversTransport: ec-09-backend
  tls: {}
